--- a/windows/sysmon/events/event-18.yml
+++ b/windows/sysmon/events/event-18.yml
@@ -1,9 +1,9 @@
 name: 'Event ID 18: PipeEvent (Pipe Connected)'
 description: This event logs when a **named pipe connection** is made between a client and a server.
 platform: windows
-log_source: sysmon
+log_source: Microsoft-Windows-Sysmon
 event_id: '18'
-event_version: '4.32'
+event_version: '1'
 event_fields:
 - standard_name: EventType
   standard_type: TBD
@@ -47,6 +47,12 @@ event_fields:
   type: string
   description: File path of the process that connected the pipe
   sample_value: C:\WINDOWS\system32\wbem\wmiprvse.exe
+- standard_name: UserName
+  standard_type: TBD
+  name: User
+  type: string
+  description: The name of the account that made a named pipe connection.
+  sample_value: NT AUTHORITY\SYSTEM
 references:
 - text: Sysmon Source
   link: https://docs.microsoft.com/en-us/sysinternals/downloads/sysmon#event-id-18-pipeevent-pipe-connected
@@ -54,15 +60,61 @@ references:
   link: https://github.com/trustedsec/SysmonCommunityGuide/blob/master/named-pipes.md
 tags: []
 event_sample:
+- format: friendly view
+  sample: |-
+    Log Name:      Microsoft-Windows-Sysmon/Operational
+    Source:        Microsoft-Windows-Sysmon
+    Date:          9/22/2022 6:05:21 PM
+    Event ID:      18
+    Task Category: Pipe Connected (rule: PipeEvent)
+    Level:         Information
+    Keywords:      
+    User:          SYSTEM
+    Computer:      pedro-computer
+    Description:
+    The description for Event ID 18 from source Microsoft-Windows-Sysmon cannot be found. Either the component that raises this event is not installed on your local computer or the installation is corrupted. You can install or repair the component on the local computer.
+
+    If the event originated on another computer, the display information had to be saved with the event.
+
+    The following information was included with the event: 
+
+    -
+    ConnectPipe
+    2022-09-23 01:05:21.330
+    EV_RenderedValue_3.00
+    1680
+    \VBoxTrayIPC-pedro
+    C:\Windows\System32\VBoxService.exe
+    NT AUTHORITY\SYSTEM
+
+    The publisher has been disabled and its resource is not available. This usually occurs when the publisher is in the process of being uninstalled or upgraded
 - format: xml
   sample: |-
-    <EventData>
-    <Data Name="RuleName">-</Data>
-    <Data Name="EventType">ConnectPipe</Data>
-    <Data Name="UtcTime">2022-06-29 19:02:29.022</Data>
-    <Data Name="ProcessGuid">{01e2a015-0003-62bc-1b00-000000000500}</Data>
-    <Data Name="ProcessId">676</Data>
-    <Data Name="PipeName">\VBoxTrayIPC-pedro</Data>
-    <Data Name="Image">C:\Windows\System32\VBoxService.exe</Data>
-    <Data Name="User">NT AUTHORITY\SYSTEM</Data>
-    </EventData>
+    <Event xmlns="http://schemas.microsoft.com/win/2004/08/events/event">
+      <System>
+        <Provider Name="Microsoft-Windows-Sysmon" Guid="{5770385f-c22a-43e0-bf4c-06f5698ffbd9}" />
+        <EventID>18</EventID>
+        <Version>1</Version>
+        <Level>4</Level>
+        <Task>18</Task>
+        <Opcode>0</Opcode>
+        <Keywords>0x8000000000000000</Keywords>
+        <TimeCreated SystemTime="2022-09-23T01:05:21.344487700Z" />
+        <EventRecordID>2562694</EventRecordID>
+        <Correlation />
+        <Execution ProcessID="6152" ThreadID="7900" />
+        <Channel>Microsoft-Windows-Sysmon/Operational</Channel>
+        <Computer>pedro-computer</Computer>
+        <Security UserID="S-1-5-18" />
+      </System>
+      <EventData>
+        <Data Name="RuleName">-</Data>
+        <Data Name="EventType">ConnectPipe</Data>
+        <Data Name="UtcTime">2022-09-23 01:05:21.330</Data>
+        <Data Name="ProcessGuid">{564ff025-d42c-62f6-2a00-000000000500}</Data>
+        <Data Name="ProcessId">1680</Data>
+        <Data Name="PipeName">\VBoxTrayIPC-pedro</Data>
+        <Data Name="Image">C:\Windows\System32\VBoxService.exe</Data>
+        <Data Name="User">NT AUTHORITY\SYSTEM</Data>
+      </EventData>
+    </Event>
