--- a/windows/sysmon/events/event-11.yml
+++ b/windows/sysmon/events/event-11.yml
@@ -1,9 +1,9 @@
 name: 'Event ID 11: FileCreate'
 description: '**File create** operations are logged when a file is created or overwritten. This event is useful for monitoring autostart locations, like the Startup folder, as well as temporary and download directories, which are common places malware drops during initial infection.'
 platform: windows
-log_source: sysmon
+log_source: Microsoft-Windows-Sysmon
 event_id: '11'
-event_version: '4.32'
+event_version: '2'
 event_fields:
 - standard_name: Tag
   standard_type: TBD
@@ -60,15 +60,58 @@ references:
   link: https://github.com/trustedsec/SysmonCommunityGuide/blob/master/file-create.md
 tags: []
 event_sample:
+- format: friendly view
+  sample: |-
+    Log Name:      Microsoft-Windows-Sysmon/Operational
+    Source:        Microsoft-Windows-Sysmon
+    Date:          9/22/2022 4:50:47 PM
+    Event ID:      11
+    Task Category: File created (rule: FileCreate)
+    Level:         Information
+    Keywords:      
+    User:          SYSTEM
+    Computer:      pedro-computer
+    Description:
+    The description for Event ID 11 from source Microsoft-Windows-Sysmon cannot be found. Either the component that raises this event is not installed on your local computer or the installation is corrupted. You can install or repair the component on the local computer.
+    If the event originated on another computer, the display information had to be saved with the event.
+    The following information was included with the event: 
+    -
+    2022-09-22 23:50:47.181
+    EV_RenderedValue_2.00
+    3976
+    C:\Windows\system32\mmc.exe
+    C:\Users\pedro-admin\AppData\Local\Temp\tmpE7EC.xml
+    2022-09-22 23:50:47.181
+    PEDRO-COMPUTER\pedro-admin
+
+    The publisher has been disabled and its resource is not available. This usually occurs when the publisher is in the process of being uninstalled or upgraded
 - format: xml
   sample: |-
-    <EventData>
-    <Data Name="RuleName">-</Data> 
-    <Data Name="UtcTime">2021-11-04 23:40:40.783</Data> 
-    <Data Name="ProcessGuid">{3710b5c6-6c2f-6184-7f00-000000000d00}</Data> 
-    <Data Name="ProcessId">4236</Data> 
-    <Data Name="Image">C:\Windows\Explorer.EXE</Data> 
-    <Data Name="TargetFilename">C:\Users\pedro\Desktop\New Text Document.txt</Data> 
-    <Data Name="CreationUtcTime">2021-11-04 23:40:40.783</Data> 
-    <Data Name="User">DESKTOP-4FPBTEN\pedro</Data> 
-    </EventData>
+    <Event xmlns="http://schemas.microsoft.com/win/2004/08/events/event">
+      <System>
+        <Provider Name="Microsoft-Windows-Sysmon" Guid="{5770385f-c22a-43e0-bf4c-06f5698ffbd9}" />
+        <EventID>11</EventID>
+        <Version>2</Version>
+        <Level>4</Level>
+        <Task>11</Task>
+        <Opcode>0</Opcode>
+        <Keywords>0x8000000000000000</Keywords>
+        <TimeCreated SystemTime="2022-09-22T23:50:47.184554800Z" />
+        <EventRecordID>2424474</EventRecordID>
+        <Correlation />
+        <Execution ProcessID="6152" ThreadID="7900" />
+        <Channel>Microsoft-Windows-Sysmon/Operational</Channel>
+        <Computer>pedro-computer</Computer>
+        <Security UserID="S-1-5-18" />
+      </System>
+      <EventData>
+        <Data Name="RuleName">-</Data>
+        <Data Name="UtcTime">2022-09-22 23:50:47.181</Data>
+        <Data Name="ProcessGuid">{564ff025-ee7b-632c-4507-000000000500}</Data>
+        <Data Name="ProcessId">3976</Data>
+        <Data Name="Image">C:\Windows\system32\mmc.exe</Data>
+        <Data Name="TargetFilename">C:\Users\pedro-admin\AppData\Local\Temp\tmpE7EC.xml</Data>
+        <Data Name="CreationUtcTime">2022-09-22 23:50:47.181</Data>
+        <Data Name="User">PEDRO-COMPUTER\pedro-admin</Data>
+      </EventData>
+    </Event>
