--- a/windows/sysmon/events/event-19.yml
+++ b/windows/sysmon/events/event-19.yml
@@ -1,7 +1,7 @@
 name: 'Event ID 19: WmiEvent (WmiEventFilter activity detected)'
 description: When a **WMI event filter is registered**, which is a method used by malware to execute, this event logs the WMI namespace, filter name and filter expression.
 platform: windows
-log_source: sysmon
+log_source: Microsoft-Windows-Sysmon
 event_id: '19'
 event_version: '4.32'
 event_fields:
