--- a/windows/sysmon/events/event-20.yml
+++ b/windows/sysmon/events/event-20.yml
@@ -1,7 +1,7 @@
 name: 'Event ID 20: WmiEvent (WmiEventConsumer activity detected)'
 description: This event logs the **registration of WMI consumers**, recording the consumer name, log, and destination.
 platform: windows
-log_source: sysmon
+log_source: Microsoft-Windows-Sysmon
 event_id: '20'
 event_version: '4.32'
 event_fields:
