--- a/windows/sysmon/events/event-21.yml
+++ b/windows/sysmon/events/event-21.yml
@@ -1,7 +1,7 @@
 name: 'Event ID 21: WmiEvent (WmiEventConsumerToFilter activity detected)'
 description: When a consumer **binds to a filter**, this event logs the consumer name and filter path.
 platform: windows
-log_source: sysmon
+log_source: Microsoft-Windows-Sysmon
 event_id: '21'
 event_version: '4.32'
 event_fields:
