--- a/windows/sysmon/events/event-6.yml
+++ b/windows/sysmon/events/event-6.yml
@@ -1,7 +1,7 @@
 name: 'Event ID 6: Driver loaded'
 description: The **driver loaded** events provides information about a driver being loaded on the system. The configured hashes are provided as well as signature information. The signature is created asynchronously for performance reasons and indicates if the file was removed after loading.
 platform: windows
-log_source: sysmon
+log_source: Microsoft-Windows-Sysmon
 event_id: '6'
 event_version: '4.32'
 event_fields:
